--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.17.2",
     "axios": "^1.6.8",
     "notistack": "^3.0.1",
     "path": "^0.12.7",
